[package]
name = "image-web"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
dotenv = "0.15"
lazy_static = "1.4"
photon-rs = "0.3"
tower = {version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tokio = { version = "1.19", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.5", features = ["headers", "multipart"] }
ril = { git = "https://github.com/jay3332/ril", features = ["all-pure"] }