[package]
name = "image-web"
authors = ["Tom-the-Bomb"]
description = "A simple imaging web app written in rust"
repository = "https://github.com/Tom-the-Bomb/imaging-app"
license = "MIT"
version = "0.1.0"
edition = "2021"
keywords = ["web", "async"]
categories = [
    "multimedia",
    "multimedia::images",
    "web-programming",
]

[dependencies]
rand = "0.8"
dotenv = "0.15"
lazy_static = "1.4"
photon-rs = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3", features = ["fs"] }
tokio = { version = "1.19", features = ["macros", "signal", "rt", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.5", features = ["headers", "multipart"] }
ril = { git = "https://github.com/jay3332/ril", features = ["all-pure"] }
